2026-01-29T02:37:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21463465757 # 861
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-29
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 1149 1629 / 1152 1632
* notice: next accum: outdated-unq outdated-all / unq all: 1152 1632 / 1155 1635
* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-12-16 2025-12-17 2025-12-18 2025-12-19 2025-12-20 2025-12-21 2025-12-22 2025-12-23 2025-12-24 2025-12-25 2025-12-26 2025-12-27 2025-12-28] / [2026-01-01 2026-01-08]

2025-12-31T02:06:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20610246735 # 855
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-31
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 1149 1629 / 1152 1632
* notice: next accum: outdated-unq outdated-all / unq all: 1149 1629 / 1152 1632
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2025-12-30T02:05:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20587062076 # 854
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-30
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 1148 1628 / 1152 1632
* notice: next accum: outdated-unq outdated-all / unq all: 1149 1629 / 1152 1632
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0