@@ -1,3 +1,12 @@
+2026-01-30T02:37:34Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21502400423 # 862
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-30
+* notice: last 14d: unq all: 4 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 1152 1632 / 1155 1635
+* notice: next accum: outdated-unq outdated-all / unq all: 1155 1635 / 1159 1639
+* notice: prev exec diff / last date diff / accum: unq all: +4 +4 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-12-29 2025-12-30 2025-12-31 2026-01-01 2026-01-02 2026-01-03 2026-01-04 2026-01-05 2026-01-06 2026-01-07 2026-01-08 2026-01-09 2026-01-10 2026-01-11] / [2026-01-16 2026-01-21 2026-01-24 2026-01-25]
+
 2026-01-29T02:37:17Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21463465757 # 861
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-29
